Include js-model

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     </section>
 
     <script src="javascripts/jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="javascripts/js-model-0.9.4.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/sammy/sammy.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/sammy/plugins/sammy.template.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/fable.js" type="text/javascript" charset="utf-8"></script>
